# poissbox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
src/: coefficients.f90  compact_schemes.f90  compare_fd_compact.f90  constants.f90  example.f90  poissbox.f90  tridsol.f90
tests/: CMakeLists.txt
tests/coefficients/: CMakeLists.txt  test_compact.f90  test_d2dx2.f90  test_lapl.f90  test_star.f90
tests/div/: CMakeLists.txt  test_div_1d.f90  test_div_3d.f90
tests/grad/: CMakeLists.txt  test_grad.f90  test_grad_1d.f90  test_grad_3d.f90
tests/lapl/: CMakeLists.txt  test_lapl.f90
tests/tridiag/: CMakeLists.txt  test_tdma.f90  test_tdma_periodic.f90  test_tdma_sweeps.f90  test_tdma_utils.f90
